<resources>
    <string name="app_name">Tennis Score</string>
    <string name="roland_garros">Roland Garros</string>
    <string name="rafael_nadal_esp">Rafael Nadal (esp)</string>
    <string name="roger_federer_swi">Roger Federer (swi)</string>
    <string name="jump_points_by">Jump points by</string>
    <string name="decrement_score">Decrement Score</string>
    <string name="increament_score">Increament Score</string>
    <string name="men_s_singles_final">MEN\'S SINGLES - FINAL</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>