<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewScores">
    <HorizontalScrollView
        android:id="@+id/hsv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:fillViewport="true"
        android:measureAllChildren="false"
        android:scrollbars="none" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/myImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.5"
            android:scaleType="fitXY"
            app:srcCompat="@mipmap/claycourt" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="125dp"
            android:layout_marginTop="30dp"
            android:layout_toEndOf="@+id/imageView3"
            android:text="@string/roland_garros"
            android:textColor="#4d1406"
            android:textSize="27dp" />

        <TextView
            android:id="@+id/p1"
            style="@style/CodeFont"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="98dp"
            android:background="#cf6026"
            android:ems="3"
            android:inputType="textPersonName"
            android:minHeight="20dp"
            android:shadowRadius="@integer/material_motion_duration_long_1"
            android:text="@string/rafael_nadal_esp"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/p2"
            style="@style/CodeFont"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="125dp"
            android:background="#cf6026"
            android:ems="3"
            android:inputType="textPersonName"
            android:minHeight="20dp"
            android:shadowRadius="@integer/material_motion_duration_long_1"
            android:text="@string/roger_federer_swi"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="388dp"
            android:layout_height="17dp"
            android:layout_alignTop="@+id/textView2"
            android:layout_alignParentStart="true"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="49dp"
            android:layout_marginRight="17dp"
            android:background="#4d1406"
            android:ems="1"
            android:text="@string/men_s_singles_final"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="10dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="45dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="25dp"
            app:srcCompat="@mipmap/icon" /><![CDATA[

        0
        android:textColor="@color/white"
        android:textSize="1.5dp"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

        ]]>

        <TextView
            android:id="@+id/set1_1"
            style="@style/CodeFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView2"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="305dp"
            android:layout_marginTop="68dp"
            android:layout_toEndOf="@+id/p1"
            android:background="#cf6026"
            android:inputType="textPersonName"
            android:minWidth="18dp"
            android:minHeight="19dp"
            android:shadowRadius="@integer/material_motion_duration_long_1"
            android:text="0"
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck" /><![CDATA[

        0
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="1.5dp"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        ]]>

        <TextView
            android:id="@+id/set2_1"
            style="@style/CodeFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="327dp"
            android:layout_marginTop="98dp"
            android:layout_toEndOf="@+id/p1"
            android:background="#cf6026"
            android:inputType="textPersonName"
            android:minWidth="18dp"
            android:minHeight="19dp"
            android:shadowRadius="@integer/material_motion_duration_long_1"
            android:text="0"
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck" /><![CDATA[

        0
        android:textColor="@color/white"
        android:textSize="1.5dp"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        0
        android:textColor="@color/white"
        android:textSize="1.5dp"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck,DuplicateSpeakableTextCheck" />



        ]]>

        <TextView
            android:id="@+id/set3_1"
            style="@style/CodeFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="350dp"
            android:layout_marginTop="98dp"
            android:layout_toEndOf="@+id/p1"
            android:background="#cf6026"
            android:inputType="textPersonName"
            android:minWidth="18dp"
            android:minHeight="19dp"
            android:shadowRadius="@integer/material_motion_duration_long_1"
            android:text="0"
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/set1_2"
            style="@style/CodeFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="305dp"
            android:layout_marginTop="125dp"
            android:layout_toEndOf="@+id/p2"
            android:background="#cf6026"
            android:inputType="textPersonName"
            android:minWidth="18dp"
            android:minHeight="19dp"
            android:shadowRadius="@integer/material_motion_duration_long_1"
            android:text="0"
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck" /><![CDATA[

        0
        android:textColor="@color/white"
        android:textSize="1.5sp"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
        android:importantForAutofill="no" />

        ]]>

        <TextView
            android:id="@+id/set2_2"
            style="@style/CodeFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="327dp"
            android:layout_marginTop="125dp"
            android:layout_toEndOf="@+id/p2"
            android:background="#cf6026"
            android:inputType="textPersonName"
            android:minWidth="18dp"
            android:minHeight="19dp"
            android:shadowRadius="@integer/material_motion_duration_long_1"
            android:text="0"
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck" /><![CDATA[

        0
        android:textColor="#000000"
        android:textSize="1.5sp"
        tools:ignore="TouchTargetSizeCheck" />

        ]]>

        <TextView
            android:id="@+id/set3_2"
            style="@style/CodeFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="350dp"
            android:layout_marginTop="125dp"
            android:layout_toEndOf="@+id/p2"
            android:background="#cf6026"
            android:inputType="textPersonName"
            android:minWidth="18dp"
            android:minHeight="19dp"
            android:shadowRadius="@integer/material_motion_duration_long_1"
            android:text="0"
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/addScore"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="87dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="215dp"
            android:backgroundTint="#4d1406"
            android:text="@string/increament_score"
            android:textSize="8sp"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/removeScore"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="23dp"
            android:layout_marginLeft="210dp"
            android:layout_marginTop="215dp"
            android:layout_toEndOf="@+id/addScore"
            android:backgroundTint="#4d1406"
            android:text="@string/decrement_score"
            android:textSize="8sp"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/set3_1"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="370dp"
            android:layout_marginTop="97dp">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="29dp"
                android:layout_height="25dp"
                android:layout_toEndOf="@+id/set2_1"
                android:text="1"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="29dp"
                android:layout_height="25dp"
                android:layout_toEndOf="@+id/set2_2"
                android:text="2"
                tools:ignore="TouchTargetSizeCheck" />
        </RadioGroup>

        <com.google.android.material.slider.Slider
            android:id="@+id/jumpValue"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/p1"
            android:layout_alignStart="@+id/textView"
            android:layout_marginStart="111dp"
            android:layout_marginLeft="190dp"
            android:layout_marginTop="45dp"
            android:backgroundTint="#FFFFFF"
            android:scrollbarSize="8dp"
            android:stepSize="1"
            android:value="1"
            android:valueFrom="1"
            android:valueTo="5"
            app:haloColor="#FFFFFF"
            app:thumbColor="#4D1406"
            app:thumbElevation="5dp"
            app:tickColor="#FFFFFF"
            app:tickColorActive="#4D1406"
            app:tickColorInactive="#4D1406"
            app:trackColorActive="#4D1406"
            app:trackColorInactive="#4D1406"
            app:trackHeight="8dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="87dp"
            android:layout_marginLeft="87dp"
            android:layout_marginTop="180dp"
            android:background="#4D1406"
            android:text="@string/jump_points_by"
            android:textColor="@color/white" />

    </RelativeLayout>
    </HorizontalScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>